# CombatSim

./: .gitignore  CMakeLists.txt  main.cpp
Characters/: Character.cpp  Character.h  Enemy.h  Player.h
Environments/: World.cpp  World.h
Items/: Items.h
